--- a/pom.xml
+++ b/pom.xml
@@ -168,15 +168,13 @@
 			<scope>test</scope>
 		</dependency>
 
+
+
 		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-all</artifactId>
-			<version>1.9.0</version>
-			<scope>test</scope>
+			<groupId>com.googlecode.lambdaj</groupId>
+			<artifactId>lambdaj</artifactId>
+			<version>2.3.3</version>
 		</dependency>
-
-
-
 	</dependencies>
 	<build>
 		<plugins>
@@ -214,6 +212,17 @@
 					<mainClass>org.test.int1.Main</mainClass>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+			        <groupId>org.mortbay.jetty</groupId>
+			        <artifactId>maven-jetty-plugin</artifactId>
+			        <version>6.1.10</version>
+			        <configuration>
+			          <stopPort>9966</stopPort>
+			          <stopKey>foo</stopKey>
+			        </configuration>
+			</plugin>
 		</plugins>
+		
 	</build>
 </project>
