--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>aspectj</groupId>
+			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
 			<version>${org.aspectj-version}</version>
 		</dependency>
@@ -167,7 +167,19 @@
 			<version>1.0.0.M1</version>
 			<scope>test</scope>
 		</dependency>
-
+		
+		<dependency>
+		    <groupId>org.springframework.social</groupId>
+		    <artifactId>spring-social-core</artifactId>
+		    <version>1.0.2.RELEASE</version>
+		</dependency> 
+		
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.2.1</version>
+		</dependency>
+            
 
 
 		<dependency>
