--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,13 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.ws</groupId>
+			<artifactId>spring-oxm</artifactId>
+			<version>1.5.10</version>
+		</dependency>
+
+
 		<!-- AOP -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
@@ -155,6 +162,13 @@
 			<artifactId>commons-validator</artifactId>
 			<version>1.4.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.castor</groupId>
+			<artifactId>castor-xml</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
 
 
 		<!-- Test -->
