--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
 			</exclusions>
 		</dependency>
 
+		<!-- Cache -->
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache-core</artifactId>
